Add footer section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
             </div>
           </template>
     </main>
-
+    <!-- site footer section -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_wrapper">
+                <div class="footer_info">
+                    <a href="index.html" class="footer-info_link">Islom.uz</a>
+                </div>
+                <div class="footer_desc">
+                    <a href="https://www.instagram.com/_emore6" class="footer-desc_link footer-link_telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="telegram:https://t.me/Emore_6" class="footer-desc_link footer-link_instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/amanullayev2210" class="footer-desc_link footer-link_github" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
