--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     <a href="index.html" class="footer-info_link">Islom.uz</a>
                 </div>
                 <div class="footer_desc">
-                    <a href="https://www.instagram.com/_emore6" class="footer-desc_link footer-link_telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a>
-                    <a href="telegram:https://t.me/Emore_6" class="footer-desc_link footer-link_instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://t.me/Emore_6" class="footer-desc_link footer-link_telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://www.instagram.com/_emore6" class="footer-desc_link footer-link_instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/amanullayev2210" class="footer-desc_link footer-link_github" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
