Add footer section and fix bugs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="site-info_link" title="bosh sahifaga qaytish uchun">Islom.uz</a>
                 </div>
                 <div class="site_darkmode">
-                    <button class="site-darkmode_button" id="js-btn"><img src="./assets/icons/moon_light.svg" id="js-modeImg"> <span class="site_infoMode_span" id="js-mode_text" title="Qorong'i rejim ko'zingiz uchun qulayroq bo'lishi mumkin"></span></button>
+                    <button class="site-darkmode_button" id="js-btn"><img src="./assets/icons/moon_light.svg" id="js-modeImg"> <span class="site_infoMode_span" id="js-mode_text"></span></button>
                 </div>
             </div>
         </div>
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="footer_wrapper">
                 <div class="footer_info">
-                    <a href="index.html" class="footer-info_link">Islom.uz</a>
+                    <a href="index.html" class="footer-info_link" title="bosh sahifaga qaytish uchun">Islom.uz</a>
                 </div>
                 <div class="footer_desc">
                     <a href="https://t.me/Emore_6" class="footer-desc_link footer-link_telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a>
